# MPI_EXP

./: .gitignore  CMakeLists.txt  README.md
src/: mpi_RTTtest.cpp  mpi_bcast.cpp  mpi_getg.cpp  mpi_hello.cpp
